--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World!
+<html lang="en">
+
+<head>
+    <meta charset="utf-8">
+
+    <title>Stage Eye</title>
+    <meta name="description" content="Stage Eye">
+    <link rel="stylesheet" href="styles.css">
+
+</head>
+<body>
+    <img src="stageEye.png" alt="StageEye logo" class="center">
+</body>
+
+</html>
