--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <img src="stageEye.png" alt="StageEye logo" class="center">
+    <div class="contact">
+	<p>info@stageeye.io</p>
+	<p>0048 696 474 269</p>
+	
+    </div>
 </body>
 
 </html>
